Added executable JAR